--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-OPENAI_API_KEY=YOUR_OPENAI_API_KEY
-OPENAI_API_BASE=https://api.openai.com/v1
+OPENAI_API_KEY=sk-jITFsRV0tLCuJMZruFd3NXAm6gUl9R5nBqoUcor4isZCdlvG
+OPENAI_API_BASE=https://gptgod.site/api/v1
 OPENAI_MODEL=gpt-4
 MAX_TOKENS=5000
 LANGUAGE=english
