--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-OPENAI_API_KEY=you_api_key
-OPENAI_API_BASE=you_base_url
-OPENAI_MODEL=gpt-3.5-turbo-16k
+OPENAI_API_KEY=sk-jITFsRV0tLCuJMZruFd3NXAm6gUl9R5nBqoUcor4isZCdlvG
+OPENAI_API_BASE=https://gptgod.site/api/v1
+OPENAI_MODEL=gpt-4
 MAX_TOKENS=5000
 LANGUAGE=english
